--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@angular/animations": "~11.2.13",
     "@angular/common": "~11.2.13",
-    "@angular/compiler": "~11.2.13",
     "@angular/core": "~11.2.13",
     "@angular/forms": "~11.2.13",
     "@angular/platform-browser": "~11.2.13",
@@ -27,6 +26,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1102.12",
     "@angular/cli": "^11.2.12",
+    "@angular/compiler": "^11.2.13",
     "@angular/compiler-cli": "~11.2.13",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
